feat: Refatora o código e implementa redirecionamento ao clicar no link [Requisito 18]

--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,11 @@ footer {
   width: 100%;
 }
 
-footer > img {
-  width: 45px;
+footer button {
+  background-color: transparent;
+  border: none;
+}
+
+footer button > img {
+  width: 40px;
 }
