--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,18 @@
   margin: 0px;
 }
 
+.start-recipe-btn {
+  border-radius: 50%;
+  font-size: 10px;
+  height: 50px;
+  position: fixed;
+  /* top: 0; */
+  right: 15px;
+  bottom: 0px;
+  width: 50px;
+  z-index: 1;
+}
+
 footer {
   background-color: goldenrod;
   bottom: 0;
