--- a/src/App.css
+++ b/src/App.css
@@ -27,12 +27,12 @@
 }
 
 .carrossel-card p {
-  margin: 0px;
+  margin: 0;
 }
 
 .start-recipe-btn {
   border-radius: 50%;
-  bottom: 0px;
+  bottom: 0;
   font-size: 10px;
   height: 50px;
   position: fixed;
